# src/BUILD

cc_library(
    name = "libsdb",
    srcs = ["libsdb.cpp", "process.cpp"],
    deps = ["//include:headers"],
    includes = ["include", "//include"],
    visibility = ["//visibility:public"],
    copts = ["-std=c++20"],
)


alias(
    name = "sdb",
    actual = ":libsdb",
    visibility = ["//visibility:public"],
)