# src/BUILD

cc_library(
    name = "libsdb",
    srcs = glob(["**/*.cpp"]),
    deps = ["//include:headers", "//include/libsdb:libsdb"],
    includes = ["include", "//include"],
    visibility = ["//visibility:public"],
    copts = ["-std=c++20"],
)


alias(
    name = "sdb",
    actual = ":libsdb",
    visibility = ["//visibility:public"],
)